# WebPulse

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml
API/: main.py
Backend/: .env.example  Dockerfile  Dockerfile.txt  composer.json  phpunit.xml
Backend/app/Http/Controllers/: TaskController.php
Backend/app/Http/Middleware/: Kernel.php
Backend/config/: app.php  database.php
Backend/database/migrations/: 2024_11_26_create_tasks_table.php
Backend/routes/: api.php
Backend/tests/Feature/: TaskTest.php
Frontend/: index.html  script.js
cpp/: CMakeLists.txt  helpers.cpp  main.cpp
cpp/include/: helpers.h
